fixes header logo alignment on tablet

--- a/css/custom.css
+++ b/css/custom.css
@@ -39,9 +39,9 @@
     max-width: 45%;
     height: auto; }
 
-@media (max-width: 767px) {
-  .header {
-    border-radius: 0; } }
+@media (min-width: 768px) and (max-width: 991px) {
+  .header .logo {
+    margin-top: 80px; } }
 
 .footer-gradient, .footer {
   background: #4a90e2;
